--- a/Pipfile
+++ b/Pipfile
@@ -13,9 +13,9 @@ pyopengl = "*"
 pynput = "*"
 opencv-python = "*"
 Pillow = "*"
-pyqtgraphpython = "*"
+keyboard = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.12"
